# hyprpaper_randomizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  main.cpp
.cache/clangd/index/: main.cpp.9A4C96AECCAD2B0D.idx
